<resources>
    <string name="app_name">Pizza-Serradifalco</string>
    <string name="app_no_name"/>
    <string name="error_occurred">Désolé une erreur est intervenue</string>

    <!-- Login String -->
    <string name="pizza_au_feu_de_bois">Pizza Au Feu De Bois</string>
    <string name="connexion_par_email">Connexion par Email</string>
    <string name="connexion_avec_google">Connexion avec Google</string>
    <!-- Login String End -->

    <!-- Home String -->
    <string name="pizza_du_moment">Pizza du moment</string>
    <string name="a_le_plaisir_de_vous_annoncer">A le plaisir de vous annoncer</string>
    <string name="leonardo_pizza">LEONARDO PIZZA</string>
    <string name="by">by</string>
    <string name="nos_pizzas_tomate">Tomate</string>
    <string name="nos_pizzas_preniun">Premium</string>
    <string name="nos_pizzas_blanche">Blanche</string>
    <string name="nos_desserts">Dessert</string>
    <string name="nos_pizzas">Nos Pizzas</string>
    <!-- Home String End -->

    <!-- Utils String -->
    <string name="error_unknown_error">Une erreur est apparue</string>
    <string name="error_no_internet">internet est requis</string>
    <string name="error_authentication_canceled">L\'authentification à était annulé</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <!-- Utils String End -->

    <!-- Menu String -->
    <string name="home_for_menu">Accueil</string>
    <string name="menu_for_menu">Menu</string>
    <string name="pizzeria_for_menu">Pizzeria</string>
    <string name="account_for_menu">Mon Compte</string>
    <string name="logout_for_menu">Déconnexion</string>
    <string name="shopping_for_menu">Shopping</string>
    <string name="found_us_for_menu">Nous Trouver</string>
    <string name="call_us_for_menu">Nous Appeler</string>
    <string name="set_price">%1$s $</string>
    <string name="na_price">N/A</string>
    <!-- Menu String End -->

    <!-- Pizzeria String -->
    <string name="pizzeria_text">
        Tout commence dans les années 60, lorsqu’une famille d’émigrés siciliens s’installe dans le sud de la
        France.\n\n
        S’entame alors l’histoire d’un savoir-faire qui sera transmis sur 3 générations, le grand-père, le père puis le
        fils Sébastien.\n\n
        Plus jeune, ayant passé la majeure partie de son enfance dans la pizzeria de son grand-père, rue Lamalgue au
        Mourillon, Sébastien a grandi avec sa passion pour la cuisine.\n\n
        C’est ainsi qu’à ses vingt ans il obtient haut la main son diplôme de cuisinier et entame sa carrière dans
        quelques restaurants varois très côtés.\n\n
        Quelques années plus tard, la fougue entrepreneuriale s’est emparée du jeune Sebastien qui a ainsi décidé de
        tout plaquer pour, comme le veut la tradition familiale, ouvrir sa propre pizzeria au 364, avenue du 11 Novembre
        à La Valette.\n\n
        À cette époque, son père ayant repris la pizzeria familiale, c’est lui qui lui a transmis le savoir faire et la
        passion dont Sebastien bénéficie aujourd’hui.\n\n
        Tout cela pour lui permettre en avril 2017 de lever le rideau et ainsi de régaler les soirées de nos très chers
        valettois.
    </string>
    <!-- Pizzeria String End -->

    <!-- Details String -->
    <string-array name="number_item">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="number_product_details">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="no_price">Large : N/A</string>
    <string name="moyenne">Moyenne :</string>
    <string name="large">Large :</string>
    <string name="prix">Prix :</string>
    <string name="supplements">Suppléments</string>
    <string name="boissons">Boissons</string>
    <string name="desserts">Desserts</string>
    <string name="ajouter">Ajouter</string>
    <string name="quantity">Quantité :</string>
    <string name="medium_price">Moyenne : %1$s $</string>
    <string name="large_price">Large : %1$s $</string>
    <string name="item_price">%1$s $</string>
    <!-- Details String End -->

    <!-- Add Address String -->
    <string-array name="code_post_item">
        <item>Code Postale</item>
        <item>83000</item>
        <item>83100</item>
        <item>83130</item>
        <item>83160</item>
    </string-array>
    <string name="ajouter_une_adresse">Ajouter une adresse</string>
    <string name="numero_de_voie">Numéro de voie</string>
    <string name="voie">Voie</string>
    <string name="complement_d_adresse">Complément d\'adresse</string>
    <string name="merci_de_saisir_le_numero_de_la_voie">Merci de saisir le numéro de la voie</string>
    <string name="merci_de_saisir_la_voie">Merci de saisir la voie</string>
    <string name="merci_de_saisir_votre_code_postale">Merci de saisir votre code postale</string>
    <string name="la_valette">La Valette</string>
    <string name="la_garde">La Garde</string>
    <string name="toulon">Toulon</string>
    <!-- Add Address String End -->

    <!-- Add User String -->
    <string name="finaliser_l_inscription">Finaliser l\'inscription</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom</string>
    <string name="phone">Téléphone</string>
    <string name="mot_de_passe_pour_le_site_web">Mot de passe pour le site web</string>
    <string name="confirmer">Confirmer</string>
    <string name="merci_de_saisir_votre_prenom">Merci de saisir votre Prénom</string>
    <string name="merci_de_saisir_votre_nom">Merci de saisir votre nom</string>
    <string name="merci_de_saisir_votre_numero_de_telephone">Merci de saisir votre numéro de téléphone</string>
    <string name="merci_de_rentrer_un_mot_de_passe_pour_utiliser_le_site_web">Merci de rentrer un mot de passe pour
        utiliser le site web
    </string>
    <string name="mes_coordonnees">Mes Coordonnées :</string>
    <!-- Add User String End -->

    <!-- Account String -->
    <string name="account_prenom">Prénom :</string>
    <string name="account_nom">Nom :</string>
    <string name="account_phone">Télèphone :</string>
    <string name="account_address">Mes Adresses :</string>
    <!-- Account String End -->

    <!-- Shopping basket String -->
    <string name="panier">Panier</string>
    <string name="total">Total :</string>
    <!-- Shopping basket String End -->

    <!-- Shopping basket item String -->
    <string name="taille">Taille :</string>
    <string name="quantit">Quantité :</string>
    <string name="shop_item_extra">Suppléments :</string>
    <!-- Shopping basket item String End -->

    <!-- Validate Order String -->
    <string-array name="time_slot">
        <item>Créneaux Horaire</item>
        <item>de 18h à 18h30</item>
        <item>de 18h30 à 19h</item>
        <item>de 19h à 20h</item>
        <item>de 20h à 21h</item>
        <item>de 21h à 22h</item>
    </string-array>
    <string name="date">Date</string>
    <string name="quand">Quand :</string>
    <string name="leonardo">Leonardo</string>
    <string name="serradifalco">Serradifalco</string>
    <string name="restaurants">Restaurants :</string>
    <string name="message">Message :</string>
    <string name="take_away_hint_message">Pensez à préciser l\'heure</string>
    <string name="take_away_date_error">Merci de choisir une date</string>
    <string name="take_away_time_error">Merci de choisir un créneaux horaire</string>
    <string name="delivery_message_hint">Laissez nous un message..</string>
    <!-- Validate Order String End -->

</resources>
