<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:padding="@dimen/popup_user_padding"
        android:background="@color/colorPrimary"
        android:layout_width="@dimen/popup_user_width"
        android:layout_height="@dimen/popup_user_height">

    <ImageButton
            android:id="@+id/popup_close_button"
            android:layout_width="@dimen/popup_close_button_size"
            android:layout_height="@dimen/popup_close_button_size"
            app:srcCompat="@drawable/ic_close"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/colorTransparent"/>

    <TextView
            android:id="@+id/popup_user_data_title"
            android:text="@string/mes_coordonnees"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/HomeTitle"
            android:textSize="@dimen/popup_user_data_title_text_size"
            android:layout_marginTop="@dimen/popup_user_data_title_margin_top"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/popup_firstname_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/popup_user_data_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/popup_firstname_input_layout_margin_top"
            app:boxCornerRadiusBottomEnd="@dimen/add_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/add_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/add_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/add_corner_radius">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/popup_firstname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prenom" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/popup_lastname_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/popup_firstname_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/popup_input_layout_margin_top"
            app:boxCornerRadiusBottomEnd="@dimen/add_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/add_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/add_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/add_corner_radius">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/popup_lastname_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/popup_phone_input_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/popup_lastname_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/popup_input_layout_margin_top"
            app:boxCornerRadiusBottomEnd="@dimen/add_corner_radius"
            app:boxCornerRadiusBottomStart="@dimen/add_corner_radius"
            app:boxCornerRadiusTopEnd="@dimen/add_corner_radius"
            app:boxCornerRadiusTopStart="@dimen/add_corner_radius">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/popup_phone_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:id="@+id/popup_validate_button"
            android:text="@string/confirmer"
            android:layout_width="0dp"
            android:layout_height="@dimen/add_button_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/add_button_horizontal_margin"
            android:layout_marginTop="@dimen/add_button_top_margin"
            android:layout_marginEnd="@dimen/add_button_horizontal_margin"
            android:backgroundTint="@color/colorAccent"
            android:textSize="@dimen/add_button_text_size"
            app:cornerRadius="@dimen/add_corner_radius"/>

</androidx.constraintlayout.widget.ConstraintLayout>