<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTransparent"
        tools:context=".validateOrder.DeliveryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!-- Loading panel -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/delivery_progress_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/colorPrimary"
                android:elevation="@dimen/progress_layout_elevation">

            <ProgressBar
                    style="?android:attr/progressBarStyle"
                    android:layout_width="@dimen/progress_bar_size"
                    android:layout_height="@dimen/progress_bar_size"
                    android:id="@+id/progressBar"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- Loading panel -->

        <TextView
                android:id="@+id/address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/account_address"
                style="@style/HomeTitle"
                android:textSize="@dimen/account_big_title_text_size"/>

        <RadioGroup
                android:id="@+id/radio_group_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/address_title"
                android:layout_marginTop="@dimen/radio_group_price_margin_top"
                android:layout_marginStart="@dimen/radio_group_price_horizontal_margin"
                android:layout_marginEnd="@dimen/radio_group_price_horizontal_margin"
                android:orientation="vertical"
                android:textAlignment="center">


        </RadioGroup>

        <TextView
                android:id="@+id/date_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/radio_group_address"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/quand"
                style="@style/HomeTitle"
                android:textSize="@dimen/account_big_title_text_size"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/delivery_date_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/date_time_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/add_input_layout_default_margin"
                android:layout_marginEnd="@dimen/add_input_layout_default_margin"
                android:layout_marginTop="@dimen/add_input_layout_top_margin"
                app:boxCornerRadiusBottomEnd="@dimen/add_corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/add_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/add_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/add_corner_radius"
                android:focusable="false">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/delivery_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:backgroundTint="@color/colorWhite"
                    android:focusable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
                android:id="@+id/delivery_time_slot_input_layout"
                android:layout_width="0dp"
                android:layout_height="55dp"
                app:layout_constraintTop_toBottomOf="@+id/delivery_date_error"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/add_input_layout_default_margin"
                android:layout_marginStart="@dimen/add_input_layout_default_margin"
                android:layout_marginTop="@dimen/add_input_layout_default_margin"
                android:background="@color/colorWhite"
                app:cardCornerRadius="@dimen/add_corner_radius">

            <Spinner
                    android:id="@+id/delivery_time_slot_spinner"
                    android:entries="@array/time_slot"
                    android:theme="@style/mySpinnerItemStyle2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>

        <TextView
                android:id="@+id/delivery_message_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/delivery_time_error"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/message"
                style="@style/HomeTitle"
                android:textSize="@dimen/account_big_title_text_size"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/delivery_message_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/delivery_message_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/add_input_layout_default_margin"
                android:layout_marginEnd="@dimen/add_input_layout_default_margin"
                android:layout_marginTop="@dimen/add_input_layout_top_margin"
                app:boxCornerRadiusBottomEnd="@dimen/add_corner_radius"
                app:boxCornerRadiusBottomStart="@dimen/add_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/add_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/add_corner_radius">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/message_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:minLines="3"
                    android:maxLines="4"
                    android:scrollbars="vertical"
                    android:hint="@string/delivery_message_hint"
                    android:inputType="textMultiLine"
                    android:backgroundTint="@color/colorWhite"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/delivery_validate_button"
                android:text="@string/confirmer"
                android:layout_width="0dp"
                android:layout_height="@dimen/add_button_height"
                app:layout_constraintTop_toBottomOf="@+id/delivery_message_input_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/add_button_horizontal_margin"
                android:layout_marginTop="@dimen/add_button_top_margin"
                android:layout_marginBottom="@dimen/add_button_top_margin"
                android:layout_marginEnd="@dimen/add_button_horizontal_margin"
                android:backgroundTint="@color/colorAccent"
                android:textSize="@dimen/add_button_text_size"
                app:cornerRadius="@dimen/add_corner_radius"/>

        <!-- error message -->
        <TextView
                android:id="@+id/delivery_date_error"
                android:text="@string/take_away_date_error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/delivery_date_input_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/add_error_margin_top"
                android:textColor="@color/colorRed"
                android:textAlignment="center"
                android:visibility="gone"/>

        <TextView
                android:id="@+id/delivery_time_error"
                android:text="@string/take_away_time_error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/delivery_time_slot_input_layout"
                android:layout_marginTop="@dimen/add_error_margin_top"
                android:textColor="@color/colorRed"
                android:textAlignment="center"
                android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>